tests/paczka1/small_fuzzy/94602314.err
Error in line 2: TrXVE5Eey A733 4,1
Error in line 14: wOVT7xM A847 -2,3
Error in line 15: wOVT7xM S33 39,5
